files/script/test_all/parse_error/block/test_block_error1.ll

def main()
{
    var i

    {
        i = 100

        var string = 100

    }

}
#script("script/test_all/parse_error/block/test_block_error1.ll")
